fix(cli):Fix execute method from ProdAddMeeting class.